# algo-trading-platform

./: .env.example  .gitignore  .mcp.json  README.md  config.toml  pyproject.toml
docs/: README.md  adapters.md  api-reference.md  architecture.md  bracket-orders.md  configuration.md  crypto-trading.md  dashboard.md  event-bus.md  expiration-management.md  getting-started.md  greeks-risk.md  options-strategies.md  options-trading.md  performance.md  risk-management.md  scaled-orders.md  strategies.md  test-coverage-analysis.md  trailing-stops.md
docs/examples/: backtest_data_collection.py  basic_streaming.py  bracket_order_strategy.py  custom_provider.py  custom_strategy.py  event_listener.py  external_alpaca_feed.py  (+7 more)
examples/: crypto_trading.py  expiration_management.py  greeks_monitoring.py  options_iron_condor.py  options_single_leg.py  options_vertical_spread.py  scaled_exit.py  trailing_stop.py
tests/: test_batch_endpoints.py  test_bracket.py  test_bracket_integration.py  test_clock.py  test_config.py  test_crypto_adapter.py  test_csv_provider.py  test_dashboard.py  test_dashboard_throttler.py  test_data_manager.py  test_e2e_simulation.py  test_events.py  test_expiration_manager.py  test_greeks_integration.py  test_greeks_provider.py  test_greeks_risk_checks.py  test_ingestion.py  test_logging.py  test_message_queue.py  test_models.py  test_options.py  test_options_adapter.py  test_options_strategy_builder.py  test_order_router.py  test_parse.py  test_perf_phase1b.py  test_performance_integration.py  test_performance_metrics.py  test_public_com.py  test_risk.py  test_scaled_orders.py  test_serialization.py  test_strategy.py  test_trailing_stop.py  test_uvloop.py
(+71 files in other folders)
