[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "algo-trading-platform"
version = "0.2.0"
description = "Live algorithmic trading platform with bring-your-own-data architecture"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "structlog>=24.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "publicdotcom-py>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
parquet = [
    "pyarrow>=14.0",
]

[project.scripts]
trading-platform = "trading_platform.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_platform"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
